--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola</h1>
-    <p>mundo</p>
-    <p>Hallo</p>
-    <p>Alles</p>
+    <h1>Hallo</h1>
+    <p>alles</p>
 </body>
 </html>
